# skysongbuilder

./: .gitignore  Cargo.toml  LICENSE  README.md  StreamedSamples.asm  offsetsUS.asm  regionSelect.asm  soundtrack.yml
.github/: workflows.yml
.github/ISSUE_TEMPLATE/: bug_report.md  general.md  in-engine-music-sound-differences.md
.github/workflows/: build.yml
src/: deserialize_with.rs  empty.mid  empty.sf2  fileutils.rs  main.rs  mainbackupthing  mainbackupthing2.rs
