[package]
name = "skysongbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.30.0", features = ["serialize"] }
midly = "0.5.3"
soundfont = "0.0.2"
chrono = "0.4.26"
colored = "2"
dse = { git = "https://github.com/adakite1/dse.git"}
thiserror = "1.0"
void = "1"
indexmap = { version = "2", features = ["serde"] }
# by_address = "1.1.0"
