[package]
name = "skysongbuilder"
version = "0.1.2-pre7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.30.0", features = ["serialize"] }
midly = "0.5.3"
soundfont = "0.0.2"
chrono = "0.4.26"
colored = "2"
# dse = { git = "https://github.com/adakite1/dse.git" }
dse = { path = "../dse" }
thiserror = "1.0"
void = "1"
indexmap = { version = "2", features = ["serde"] }
symphonia = { version = "0.5.3", features = ["all"] }
hound = "3.5.1"
uuid = "1.4.1"
riff = "2.0.0"
bevy_reflect = "0.11.3"
# by_address = "1.1.0"
